--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CucumberLearn</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "Rails3 Devise Rspec Cucumber" %></title>
+  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rails3 Devise Rspec Cucumber" %>">
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield(:head) %>
 </head>
-<body>
-
-<%= yield %>
-
+<body class="<%= controller_name %> <%= action_name %>">
+<div id="container" class="container">
+  <header>
+    <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
+  </header>
+  <div id="main" role="main">
+    <%= yield %>
+  </div>
+  <footer>
+  </footer>
+</div> <!--! end of #container -->
 </body>
 </html>
