--- a/app/views/devise/new.html.erb
+++ b/app/views/devise/new.html.erb
@@ -1,17 +1,18 @@
-<h2>Sign up</h2>
+<h2>Sign up 12345</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+    bbbbb
 <p><%= f.label :name %><br />
 <%= f.text_field :name %></p>
-
+       aaaa
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :password_confirmation %><br /> rsrdudavriuuaitsarcuas
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.submit "Sign up" %></div>
